--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <script src="https://kit.fontawesome.com/bc63f64439.js" crossorigin="anonymous"></script>
   </body>
 </html>
